Fix row gaps and padding

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ nav {
     grid-template-columns: 50px 1fr;
     grid-auto-rows: fit-content(40px);
     column-gap: 20px;
+    row-gap: 30px;
 
     a {
         color: var(--accent-text-color);
@@ -37,6 +38,7 @@ nav {
     }
     .logo a {
         font-size: 24px;
+        padding: 20px;
     }
 
     .logo, a, ul, li {
